# internal/models/paginated.model.go
@@ -1,0 +1,11 @@
+package models
+
+type Paginated[T any] struct {
+	Items      []T  `json:"items"`
+	Page       int  `json:"page"`
+	PageSize   int  `json:"page_size"`
+	TotalItems int  `json:"total_items"`
+	TotalPages int  `json:"total_pages"`
+	HasNext    bool `json:"has_next"`
+	HasPrev    bool `json:"has_prev"`
+}
